--- a/ex12/src/index.html
+++ b/ex12/src/index.html
@@ -4,11 +4,10 @@
     <body>
         <!-- Only change code below this line -->
 
-        <video width="540" height="410" controls>
-            <source src="https://www.youtube.com/watch?v=jhzpbWwo7hY" type="video/mp4">
-            <source src="https://www.youtube.com/watch?v=Hr-nB-oUGA4" type="video/ogg">
-            Your browser does not support the video tag.
-        </video>
+        <audio controls>
+            <source src="https://etc.usf.edu/lit2go/audio/mp3/grimms-fairy-tales-004-the-travelling-musicians.3054.mp3">
+            Your browser does not support the audio tag.
+        </audio>
 
         <!-- Only change code above this line -->
     </body>
